--- a/Intro section with dropdown navigation/styles/style.css
+++ b/Intro section with dropdown navigation/styles/style.css
@@ -22,12 +22,11 @@ header {
 }
 .logo,
 .menu {
-  padding: 16px 16px 2px;
+  padding: 16px 16px 8px;
 }
 .logo img {
 }
 .menu img {
-  width: 35px;
 }
 .banner {
 }
@@ -35,36 +34,36 @@ header {
   width: 100%;
 }
 main {
-  padding: 40px 16px;
+  padding: 3em 0;
   text-align: center;
 }
 main h1 {
+  font-size: 2em;
 }
 main article {
   padding-top: 24px;
-  height: 22vh;
 }
 article p {
   color: var(--Medium-Gray);
   line-height: 24px;
-  padding-bottom: 32px;
+  padding: 0px 1em 2.5em 1em;
+  font-size: 1rem;
 }
 article .button {
   background-color: var(--Almost-Black);
-  padding: 16px 24px;
+  padding: 1em 1.5em;
   border-radius: 15px;
   color: white;
   text-decoration: none;
+  font-size: 1rem;
 }
 .clients {
-  padding: 40px 16px;
-  max-width: 90%;
+  width: 100%;
+  padding: 4em 0 4em 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 .clients img {
-  width: 20%;
-}
-.attribution {
+  scale: 0.75;
 }
