--- a/Fylo data storage component master/styles/style.css
+++ b/Fylo data storage component master/styles/style.css
@@ -44,6 +44,8 @@ h2 {
   box-sizing: border-box;
   height: 30vh;
   width: 45vh;
+  min-height: 190px;
+  min-width: 310px;
 }
 .options {
   padding: 3em 0;
@@ -73,7 +75,9 @@ h2 {
   padding: 2em;
   box-sizing: border-box;
   height: 20vh;
+  min-height: 140px;
   width: 45vh;
+  min-width: 310px;
   text-align: center;
 }
 .storage-bar {
@@ -90,16 +94,18 @@ h2 {
   border-radius: 15px;
   width: 70%;
   height: 100%;
+  position: relative;
 }
 .value-bar::after {
   content: "";
+  display: block;
   background: white;
   width: 0.7em;
   height: 0.7em;
   border-radius: 50%;
   position: absolute;
   margin: 0.1em;
-  margin-left: 5.5em;
+  right: 0;
 }
 .values {
   width: 100%;
@@ -112,6 +118,7 @@ h2 {
 .storage-indicator {
   background-color: white;
   border-radius: 8px;
+  padding: 0.5em;
   width: 60%;
   height: 70%;
   position: relative;
@@ -132,4 +139,47 @@ h2 {
 .storage-indicator span {
   color: var(--Grayish-Blue);
   font-size: 0.4em;
+}
+
+.attribution {
+  position: absolute;
+  bottom: 0;
+}
+
+@media screen and (min-width: 769px) {
+  body {
+    flex-direction: row;
+    align-items: center;
+  }
+  .main {
+    margin-top: 4%;
+    height: 22vh;
+    width: 80vh;
+    text-align: left;
+  }
+  .value-bar::after {
+    width: 0.9em;
+    height: 0.9em;
+  }
+  .storage-indicator {
+    width: 30%;
+    height: 60%;
+    position: relative;
+    top: -10em;
+    left: 67%;
+  }
+  .storage-indicator::after {
+    content: "";
+    display: block;
+    border-left: 2em solid transparent;
+    border-top: 1em solid white;
+    border-right: 2em solid white;
+    border-bottom: 1em solid transparent;
+    box-sizing: border-box;
+    width: 2em;
+    height: 2em;
+    position: absolute;
+    right: 0;
+    top: 3.5em;
+  }
 }
